Fix about text and add scrollbar

--- a/steg 2/assets/scss/_pages.scss
+++ b/steg 2/assets/scss/_pages.scss
@@ -400,6 +400,7 @@ main#about-content {
         }
         
         .other-projects {
+            overflow-y: scroll;
             .items {
                 display: flex;
                 flex-direction: column;
